--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <h1>RICERCA LAVORO</h1>
     <div class="data">
         <p><b>Titolo lavorativo</b></p>
-        <input type="text" id="lavoro" value="">
+        <input type="text" id="lavoro" placeholder="Inserici">
         <p><b>Posizione geografica</b></p>
-        <input type ="text" id="posizione" value="">
+        <input type ="text" id="posizione" placeholder="Inserici">
         <button onclick="cercaLavoroEPosizione()">CERCA</button>
     </div>
-    <div class="elenco">
+    <h3>Non hai cercato alcun lavoro</h3>
+    <div class="lavori">
         <ul id="lista">
 
         </ul>
