--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button onclick="cercaLavoroEPosizione()">CERCA</button>
     </div>
     <h3>Non hai cercato alcun lavoro</h3>
+    <h3 class="error"></h3>
     <div class="lavori">
         <ul id="lista">
 
