--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button onclick="cercaLavoroEPosizione()">CERCA</button>
     </div>
     <h3>Non hai cercato alcun lavoro</h3>
-    <div class="lavori">
+    <div class="sfondo">
         <ul id="lista">
 
         </ul>
